--- a/numpy学习/1-NumPy科学计算库.ipynb
+++ b/numpy学习/1-NumPy科学计算库.ipynb
@@ -187,7 +187,7 @@
     {
      "data": {
       "text/plain": [
-       "array([27, 20, 11, 93, 61, 27, 54, 22,  8,  7])"
+       "array([35, 88, 94,  8, 25, 91, 92, 92, 58, 48])"
       ]
      },
      "execution_count": 10,
@@ -207,8 +207,8 @@
     {
      "data": {
       "text/plain": [
-       "array([-0.05705345, -1.03980564,  1.89665112, -1.02149296, -0.81742793,\n",
-       "       -0.85418422,  0.3170415 ,  1.29285763, -3.23365755,  0.54612267])"
+       "array([ 0.9495732 , -1.37805955,  0.22167572,  1.22116488, -0.96333018,\n",
+       "       -1.62945548, -0.89126891, -1.27839099,  0.75038016, -1.041503  ])"
       ]
      },
      "execution_count": 11,
@@ -240,7 +240,7 @@
     }
    ],
    "source": [
-    "np.linspace(1,99,50) # 等差数列"
+    "np.linspace(1,99,50) # 等差数列（参数1,99是闭区间； 50是分成50份）"
    ]
   },
   {
@@ -273,9 +273,9 @@
     {
      "data": {
       "text/plain": [
-       "array([[1, 9, 1, 9, 0],\n",
-       "       [5, 3, 0, 3, 4],\n",
-       "       [1, 4, 2, 2, 6]])"
+       "array([[2, 8, 5, 3, 3],\n",
+       "       [8, 8, 6, 8, 2],\n",
+       "       [7, 2, 5, 3, 5]])"
       ]
      },
      "execution_count": 14,
@@ -298,13 +298,13 @@
     {
      "data": {
       "text/plain": [
-       "array([[[3, 4, 3, 3],\n",
-       "        [1, 4, 4, 0],\n",
-       "        [0, 1, 6, 5]],\n",
+       "array([[[5, 7, 9, 0],\n",
+       "        [8, 0, 1, 1],\n",
+       "        [3, 6, 9, 1]],\n",
        "\n",
-       "       [[8, 4, 3, 9],\n",
-       "        [8, 3, 1, 9],\n",
-       "        [1, 8, 5, 7]]])"
+       "       [[2, 6, 5, 6],\n",
+       "        [0, 5, 8, 1],\n",
+       "        [0, 6, 0, 3]]])"
       ]
      },
      "execution_count": 15,
@@ -332,9 +332,9 @@
     {
      "data": {
       "text/plain": [
-       "array([[0.05050598, 0.52598778, 0.31556581, 0.22015179, 0.52301047],\n",
-       "       [0.19719128, 0.41950968, 0.39237632, 0.61780848, 0.23298964],\n",
-       "       [0.61109531, 0.3695958 , 0.00456287, 0.61476167, 0.24307441]])"
+       "array([[0.56994077, 0.90350913, 0.91696149, 0.67360674, 0.57241613],\n",
+       "       [0.57166928, 0.30801911, 0.24293421, 0.69876795, 0.36386736],\n",
+       "       [0.39291748, 0.11480605, 0.09529479, 0.34033519, 0.01573928]])"
       ]
      },
      "execution_count": 16,
@@ -604,7 +604,7 @@
     {
      "data": {
       "text/plain": [
-       "array([2, 4, 5], dtype=int32)"
+       "array([2, 4, 5])"
       ]
      },
      "execution_count": 30,
@@ -829,9 +829,9 @@
     {
      "data": {
       "text/plain": [
-       "array([[9, 6, 9, 4, 0],\n",
-       "       [8, 5, 1, 2, 5],\n",
-       "       [9, 3, 1, 5, 9]])"
+       "array([[6, 3, 9, 3, 3],\n",
+       "       [6, 6, 0, 4, 8],\n",
+       "       [3, 6, 5, 1, 2]])"
       ]
      },
      "execution_count": 38,
@@ -852,9 +852,9 @@
     {
      "data": {
       "text/plain": [
-       "array([[81, 36, 81, 16,  0],\n",
-       "       [64, 25,  1,  4, 25],\n",
-       "       [81,  9,  1, 25, 81]])"
+       "array([[36,  9, 81,  9,  9],\n",
+       "       [36, 36,  0, 16, 64],\n",
+       "       [ 9, 36, 25,  1,  4]])"
       ]
      },
      "execution_count": 39,
@@ -874,9 +874,9 @@
     {
      "data": {
       "text/plain": [
-       "array([[81, 36, 81, 16,  0],\n",
-       "       [64, 25,  1,  4, 25],\n",
-       "       [81,  9,  1, 25, 81]])"
+       "array([[36,  9, 81,  9,  9],\n",
+       "       [36, 36,  0, 16, 64],\n",
+       "       [ 9, 36, 25,  1,  4]], dtype=int32)"
       ]
      },
      "execution_count": 40,
@@ -896,9 +896,9 @@
     {
      "data": {
       "text/plain": [
-       "array([[4.5, 3. , 4.5, 2. , 0. ],\n",
-       "       [4. , 2.5, 0.5, 1. , 2.5],\n",
-       "       [4.5, 1.5, 0.5, 2.5, 4.5]])"
+       "array([[3. , 1.5, 4.5, 1.5, 1.5],\n",
+       "       [3. , 3. , 0. , 2. , 4. ],\n",
+       "       [1.5, 3. , 2.5, 0.5, 1. ]])"
       ]
      },
      "execution_count": 41,
@@ -918,9 +918,9 @@
     {
      "data": {
       "text/plain": [
-       "array([[1, 0, 1, 0, 0],\n",
-       "       [0, 1, 1, 0, 1],\n",
-       "       [1, 1, 1, 1, 1]])"
+       "array([[0, 1, 1, 1, 1],\n",
+       "       [0, 0, 0, 0, 0],\n",
+       "       [1, 0, 1, 1, 0]], dtype=int32)"
       ]
      },
      "execution_count": 42,
@@ -940,9 +940,9 @@
     {
      "data": {
       "text/plain": [
-       "array([[4, 3, 4, 2, 0],\n",
-       "       [4, 2, 0, 1, 2],\n",
-       "       [4, 1, 0, 2, 4]])"
+       "array([[3, 1, 4, 1, 1],\n",
+       "       [3, 3, 0, 2, 4],\n",
+       "       [1, 3, 2, 0, 1]], dtype=int32)"
       ]
      },
      "execution_count": 43,
@@ -962,9 +962,9 @@
     {
      "data": {
       "text/plain": [
-       "array([[ True,  True,  True, False, False],\n",
-       "       [ True, False, False, False, False],\n",
-       "       [ True, False, False, False,  True]])"
+       "array([[ True, False,  True, False, False],\n",
+       "       [ True,  True, False, False,  True],\n",
+       "       [False,  True, False, False, False]])"
       ]
      },
      "execution_count": 44,
@@ -984,9 +984,9 @@
     {
      "data": {
       "text/plain": [
-       "array([[False,  True, False, False, False],\n",
-       "       [False, False, False, False, False],\n",
-       "       [False, False, False, False, False]])"
+       "array([[ True, False, False, False, False],\n",
+       "       [ True,  True, False, False, False],\n",
+       "       [False,  True, False, False, False]])"
       ]
      },
      "execution_count": 45,
@@ -1006,9 +1006,9 @@
     {
      "data": {
       "text/plain": [
-       "array([[9, 6, 9, 4, 0],\n",
-       "       [8, 5, 1, 2, 5],\n",
-       "       [9, 3, 1, 5, 9]])"
+       "array([[6, 3, 9, 3, 3],\n",
+       "       [6, 6, 0, 4, 8],\n",
+       "       [3, 6, 5, 1, 2]])"
       ]
      },
      "execution_count": 46,
@@ -1038,9 +1038,9 @@
     {
      "data": {
       "text/plain": [
-       "array([[109, 106, 109, 104, 100],\n",
-       "       [108, 105, 101, 102, 105],\n",
-       "       [109, 103, 101, 105, 109]])"
+       "array([[106, 103, 109, 103, 103],\n",
+       "       [106, 106, 100, 104, 108],\n",
+       "       [103, 106, 105, 101, 102]])"
       ]
      },
      "execution_count": 48,
@@ -1060,9 +1060,9 @@
     {
      "data": {
       "text/plain": [
-       "array([[109, 106, 109, 104, 100],\n",
-       "       [108, 105, 101, 102, 105],\n",
-       "       [109, 103, 101, 105, 109]])"
+       "array([[106, 103, 109, 103, 103],\n",
+       "       [106, 106, 100, 104, 108],\n",
+       "       [103, 106, 105, 101, 102]])"
       ]
      },
      "execution_count": 49,
@@ -1097,7 +1097,7 @@
     {
      "data": {
       "text/plain": [
-       "array([32, 43, 35, 26, 78, 27, 10, 75, 67, 91])"
+       "array([51,  5, 49, 85, 73, 49, 11,  2, 92, 45])"
       ]
      },
      "execution_count": 50,
@@ -1118,7 +1118,7 @@
     {
      "data": {
       "text/plain": [
-       "43"
+       "5"
       ]
      },
      "execution_count": 51,
@@ -1138,7 +1138,7 @@
     {
      "data": {
       "text/plain": [
-       "array([32, 26, 27])"
+       "array([51, 85, 49])"
       ]
      },
      "execution_count": 52,
@@ -1158,7 +1158,7 @@
     {
      "data": {
       "text/plain": [
-       "array([26, 78, 27])"
+       "array([85, 73, 49])"
       ]
      },
      "execution_count": 53,
@@ -1178,7 +1178,7 @@
     {
      "data": {
       "text/plain": [
-       "array([26, 27])"
+       "array([85, 49])"
       ]
      },
      "execution_count": 54,
@@ -1198,7 +1198,7 @@
     {
      "data": {
       "text/plain": [
-       "array([91, 67, 75, 10, 27, 78, 26, 35, 43, 32])"
+       "array([45, 92,  2, 11, 49, 73, 85, 49,  5, 51])"
       ]
      },
      "execution_count": 55,
@@ -1218,7 +1218,7 @@
     {
      "data": {
       "text/plain": [
-       "array([91, 10, 26, 32])"
+       "array([45, 11, 85, 51])"
       ]
      },
      "execution_count": 56,
@@ -1245,9 +1245,9 @@
     {
      "data": {
       "text/plain": [
-       "array([[25, 58, 97, 15,  4],\n",
-       "       [34, 69, 34, 35, 28],\n",
-       "       [95, 93, 25, 97, 36]])"
+       "array([[69, 29, 78, 58, 28],\n",
+       "       [98, 79, 65, 15, 12],\n",
+       "       [ 7, 22, 28, 77, 63]])"
       ]
      },
      "execution_count": 57,
@@ -1268,7 +1268,7 @@
     {
      "data": {
       "text/plain": [
-       "97"
+       "78"
       ]
      },
      "execution_count": 58,
@@ -1289,7 +1289,7 @@
     {
      "data": {
       "text/plain": [
-       "array([69, 34])"
+       "array([79, 65])"
       ]
      },
      "execution_count": 59,
@@ -1310,7 +1310,7 @@
     {
      "data": {
       "text/plain": [
-       "array([35, 36])"
+       "array([15, 63])"
       ]
      },
      "execution_count": 60,
@@ -1331,8 +1331,8 @@
     {
      "data": {
       "text/plain": [
-       "array([[35, 28],\n",
-       "       [97, 36]])"
+       "array([[15, 12],\n",
+       "       [77, 63]])"
       ]
      },
      "execution_count": 61,
@@ -1353,8 +1353,8 @@
     {
      "data": {
       "text/plain": [
-       "array([[25, 97,  4],\n",
-       "       [95, 25, 36]])"
+       "array([[69, 78, 28],\n",
+       "       [ 7, 28, 63]])"
       ]
      },
      "execution_count": 62,
@@ -1375,9 +1375,9 @@
     {
      "data": {
       "text/plain": [
-       "array([[  25,   58,   97,   15,    4],\n",
-       "       [  34,   69,   34,   35,   28],\n",
-       "       [  95,   93, 1042,   97, 1042]])"
+       "array([[  69,   29,   78,   58,   28],\n",
+       "       [  98,   79,   65,   15,   12],\n",
+       "       [   7,   22, 1042,   77, 1042]])"
       ]
      },
      "execution_count": 63,
@@ -1406,8 +1406,8 @@
     {
      "data": {
       "text/plain": [
-       "array([57, 27, 54, 33, 68, 53, 48, 99, 19, 90,  2,  8, 69, 34, 81,  3, 84,\n",
-       "        5, 23, 70])"
+       "array([95, 53,  4, 58,  0, 45, 79,  6, 95, 26, 26, 33, 34, 94, 19, 44, 81,\n",
+       "       82, 94,  1])"
       ]
      },
      "execution_count": 64,
@@ -1428,7 +1428,7 @@
     {
      "data": {
       "text/plain": [
-       "array([33, 53, 99])"
+       "array([58, 45,  6])"
       ]
      },
      "execution_count": 65,
@@ -1448,7 +1448,7 @@
     {
      "data": {
       "text/plain": [
-       "array([68, 99, 90, 69, 81, 84, 70])"
+       "array([95, 79, 95, 94, 81, 82, 94])"
       ]
      },
      "execution_count": 66,
@@ -1470,7 +1470,7 @@
     {
      "data": {
       "text/plain": [
-       "array([27, 99, 19, 90,  2,  8, 81,  3, 84,  5, 23])"
+       "array([95,  4,  0,  6, 95, 26, 26, 94, 19, 81, 82, 94,  1])"
       ]
      },
      "execution_count": 67,
@@ -1494,7 +1494,7 @@
     {
      "data": {
       "text/plain": [
-       "array([54, 25, 66, 67, 68])"
+       "array([89, 91, 64, 10, 96])"
       ]
      },
      "execution_count": 68,
@@ -1516,7 +1516,7 @@
     {
      "data": {
       "text/plain": [
-       "array([1, 0, 2, 3, 4])"
+       "array([3, 2, 0, 1, 4], dtype=int64)"
       ]
      },
      "execution_count": 69,
@@ -1537,7 +1537,7 @@
     {
      "data": {
       "text/plain": [
-       "array([25, 54, 66, 67, 68])"
+       "array([10, 64, 89, 91, 96])"
       ]
      },
      "execution_count": 70,
@@ -1557,11 +1557,11 @@
     {
      "data": {
       "text/plain": [
-       "array([[ 3, 56, 47, 71, 34],\n",
-       "       [34, 67, 29, 81, 17],\n",
-       "       [23, 36, 69, 71, 76],\n",
-       "       [81, 86, 10,  8,  7],\n",
-       "       [ 2, 62, 85, 32, 98]])"
+       "array([[92,  0, 74, 63, 76],\n",
+       "       [82, 15, 48, 38, 28],\n",
+       "       [39, 57, 42, 58, 14],\n",
+       "       [75, 84, 71, 45, 34],\n",
+       "       [66,  6, 48, 67, 71]])"
       ]
      },
      "execution_count": 71,
@@ -1577,20 +1577,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[81, 86, 10,  8,  7],\n",
-       "       [34, 67, 29, 81, 17],\n",
-       "       [ 3, 56, 47, 71, 34],\n",
-       "       [23, 36, 69, 71, 76],\n",
-       "       [ 2, 62, 85, 32, 98]])"
+       "array([[39, 57, 42, 58, 14],\n",
+       "       [82, 15, 48, 38, 28],\n",
+       "       [66,  6, 48, 67, 71],\n",
+       "       [75, 84, 71, 45, 34],\n",
+       "       [92,  0, 74, 63, 76]])"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1598,13 +1598,296 @@
    "source": [
     "arr3[np.argsort(arr3[:,2])]  # 花式索引"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 作业"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 作业4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([15, 42, 24, 31, 19, 23, 82, 47, 36, 63, 32,  2, 11, 89, 56, 90, 24,\n",
+       "       12, 15, 35,  0, 94, 74, 17,  0, 36, 21, 45, 48, 26])"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "最大值：94\n",
+      "最小值：0\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr = np.random.randint(0,100,size=30)\n",
+    "display(arr)\n",
+    "# 获取最大值，最小值\n",
+    "print(f\"最大值：{arr.max()}\")\n",
+    "print(f\"最小值：{arr.min()}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 作业5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 1, 1, 1, 1, 1, 1, 1, 1, 1],\n",
+       "       [1, 0, 0, 0, 0, 0, 0, 0, 0, 1],\n",
+       "       [1, 0, 0, 0, 0, 0, 0, 0, 0, 1],\n",
+       "       [1, 0, 0, 0, 0, 0, 0, 0, 0, 1],\n",
+       "       [1, 0, 0, 0, 0, 0, 0, 0, 0, 1],\n",
+       "       [1, 0, 0, 0, 0, 0, 0, 0, 0, 1],\n",
+       "       [1, 0, 0, 0, 0, 0, 0, 0, 0, 1],\n",
+       "       [1, 0, 0, 0, 0, 0, 0, 0, 0, 1],\n",
+       "       [1, 0, 0, 0, 0, 0, 0, 0, 0, 1],\n",
+       "       [1, 1, 1, 1, 1, 1, 1, 1, 1, 1]], dtype=int8)"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 创建一个10*10的ndarray对象，且矩阵边界全为1，里面全为0\n",
+    "arr = np.zeros(shape=(10,10),dtype=np.int8)\n",
+    "arr[[0,-1]] = 1  # 通过索引给行赋值\n",
+    "arr[:,[0,-1]] = 1  # 通过索引给列赋值\n",
+    "arr"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 作业6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0., 1., 2., 3., 4.],\n",
+       "       [0., 1., 2., 3., 4.],\n",
+       "       [0., 1., 2., 3., 4.],\n",
+       "       [0., 1., 2., 3., 4.],\n",
+       "       [0., 1., 2., 3., 4.]])"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 创建一个每一行都是 0到4的 5*5的矩阵\n",
+    "arr = np.full(shape=(5,5), fill_value=3.14)\n",
+    "arr2 = np.arange(0,5)\n",
+    "arr[:] = arr2  # 将arr的每一行都替换为arr2\n",
+    "arr"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 作业7"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([   1.,    2.,    4.,    8.,   16.,   32.,   64.,  128.,  256.,\n",
+       "        512., 1024.])"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.set_printoptions(suppress=True)  # 不显示科学计数法\n",
+    "np.logspace(0,10,base=2,num=11)  # 等比数列： 2^0 到 2^10"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 作业8"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "未排序: [ 0.44802958 -0.75047933  0.31144623  0.12758561  0.98260547 -1.41950858\n",
+      " -0.86122    -0.1936521  -0.02873362  0.2745285 ]\n",
+      "已排序: [-1.41950858 -0.86122    -0.75047933 -0.1936521  -0.02873362  0.12758561\n",
+      "  0.2745285   0.31144623  0.44802958  0.98260547]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 创建一个长度为10的正态分布，并排序\n",
+    "arr = np.random.randn(10)\n",
+    "print(\"未排序:\", arr)\n",
+    "arr2 = np.sort(arr)\n",
+    "print(\"已排序:\", arr2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 作业9"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "原数据:\n",
+      " [0.66335809 0.77104895 0.55910169 0.31914529 0.59785255 0.37520336\n",
+      " 0.45693788 0.61612596 0.17071445 0.8835054 ]\n",
+      "最大值条件:\n",
+      " [False False False False False False False False False  True]\n",
+      "修改之后数据:\n",
+      " [   0.66335809    0.77104895    0.55910169    0.31914529    0.59785255\n",
+      "    0.37520336    0.45693788    0.61612596    0.17071445 -100.        ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 创建一个长度为10的随机数组，并将最大值替换为 -100\n",
+    "np.set_printoptions(suppress=True)\n",
+    "arr = np.random.random(10)\n",
+    "print(\"原数据:\\n\", arr)\n",
+    "\n",
+    "# 找到最大值\n",
+    "v = arr.max()\n",
+    "\n",
+    "# 进行条件判断\n",
+    "cond = arr==v\n",
+    "print(\"最大值条件:\\n\", cond)\n",
+    "\n",
+    "# 根据条件赋值\n",
+    "arr[cond] = -100\n",
+    "print(\"修改之后数据:\\n\", arr)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 作业10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "原数据：\n",
+      " [[ 9 15 64 28 89]\n",
+      " [93 29  8 73  0]\n",
+      " [40 36 16 11 54]\n",
+      " [88 62 33 72 78]\n",
+      " [49 51 54 77 69]] \n",
+      "\n",
+      "第三列数据： [64  8 16 33 54] \n",
+      "\n",
+      "根据第三列数据升序排列后，原数据索引的位置： [1 2 3 4 0] \n",
+      "\n",
+      "根据第3列大小顺序排序后数据：\n",
+      " [[93 29  8 73  0]\n",
+      " [40 36 16 11 54]\n",
+      " [88 62 33 72 78]\n",
+      " [49 51 54 77 69]\n",
+      " [ 9 15 64 28 89]] \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 根据第3列大小顺序对一个5*5矩阵进行排序\n",
+    "np.random.seed(10)\n",
+    "arr = np.random.randint(0,100,(5,5))\n",
+    "print(\"原数据：\\n\", arr, \"\\n\")\n",
+    "\n",
+    "print(\"第三列数据：\", arr[:,2], \"\\n\")\n",
+    "\n",
+    "indices = np.argsort(arr[:,2])\n",
+    "print(\"根据第三列数据升序排列后，原数据索引的位置：\", indices, \"\\n\")\n",
+    "\n",
+    "arr2 = arr[indices]  # 花式索引\n",
+    "print(\"根据第3列大小顺序排序后数据：\\n\", arr2, \"\\n\")\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv39",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "venv39"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1616,7 +1899,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.16"
   },
   "toc": {
    "base_numbering": 1,
@@ -1631,7 +1914,7 @@
     "height": "calc(100% - 180px)",
     "left": "10px",
     "top": "150px",
-    "width": "329px"
+    "width": "165px"
    },
    "toc_section_display": true,
    "toc_window_display": true
