--- a/numpy学习/2-code.ipynb
+++ b/numpy学习/2-code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "1ffafa06",
+   "id": "64ba372a",
    "metadata": {},
    "source": [
     "## 索引切片"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "f89d738e",
+   "id": "c5dea832",
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "79d7cf81",
+   "id": "c7951fb0",
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "1c09bd0d",
+   "id": "97ebecde",
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "2ab646db",
+   "id": "b4eeb46a",
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "f33aa9c3",
+   "id": "2f42e59c",
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f7cf426b",
+   "id": "9551a680",
    "metadata": {},
    "source": [
     "### 方式1"
@@ -138,7 +138,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "e658509f",
+   "id": "724e5351",
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31d95de0",
+   "id": "3c9bac54",
    "metadata": {},
    "source": [
     "### 方式2"
@@ -168,7 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "7d44b513",
+   "id": "b83de6a8",
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +191,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "ec5198e4",
+   "id": "e03605c3",
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8beb473d",
+   "id": "e159da0c",
    "metadata": {},
    "source": [
     "## 形状改变"
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd5fe09a",
+   "id": "e25cbdde",
    "metadata": {},
    "source": [
     "### reshape"
@@ -231,7 +231,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "0e259425",
+   "id": "a22a5ef6",
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "fff23fc4",
+   "id": "6f1d1fa6",
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c201b15a",
+   "id": "a348161d",
    "metadata": {},
    "source": [
     "### 叠加"
@@ -343,7 +343,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "e00bd441",
+   "id": "b150363f",
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +396,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "eeafbb41",
+   "id": "7fb13f3b",
    "metadata": {},
    "outputs": [
     {
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28c7f21b",
+   "id": "0c63ae62",
    "metadata": {},
    "source": [
     "### 拆分"
@@ -458,7 +458,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "1885b1c3",
+   "id": "8a3aba4e",
    "metadata": {},
    "outputs": [
     {
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6675270c",
+   "id": "6aebf7eb",
    "metadata": {},
    "source": [
     "### 数组转置"
@@ -576,7 +576,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "4d3235ea",
+   "id": "3561a0c0",
    "metadata": {},
    "outputs": [
     {
@@ -653,8 +653,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
-   "id": "2d5100ee",
+   "execution_count": 69,
+   "id": "64fa8859",
    "metadata": {},
    "outputs": [
     {
@@ -667,13 +667,245 @@
        "       [0, 2, 3]])"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "np.transpose(A,axes=[1,0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "56e8b87b",
+   "metadata": {},
+   "source": [
+    "## 广播"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "11d7a22b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[3, 6, 1],\n",
+       "       [2, 8, 7],\n",
+       "       [9, 5, 3],\n",
+       "       [6, 3, 0],\n",
+       "       [2, 2, 5]])"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 2, 3])"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 4,  8,  4],\n",
+       "       [ 3, 10, 10],\n",
+       "       [10,  7,  6],\n",
+       "       [ 7,  5,  3],\n",
+       "       [ 3,  4,  8]])"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr1 = np.random.randint(0,10,size=(5,3))\n",
+    "\n",
+    "arr2 = np.arange(1,4)\n",
+    "\n",
+    "display(arr1,arr2)\n",
+    "\n",
+    "# arr2 只有1行，arr1有5行\n",
+    "# 广播机制：arr2变成了5份，每一份分别和arr1的每一行相加\n",
+    "arr1 + arr2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "37d77845",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 2, 9, 3, 6],\n",
+       "       [2, 3, 4, 4, 7],\n",
+       "       [8, 9, 2, 1, 6],\n",
+       "       [6, 3, 1, 8, 3]])"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([4.2, 4. , 5.2, 4.2])"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[4.2],\n",
+       "       [4. ],\n",
+       "       [5.2],\n",
+       "       [4.2]])"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[-3.2, -2.2,  4.8, -1.2,  1.8],\n",
+       "       [-2. , -1. ,  0. ,  0. ,  3. ],\n",
+       "       [ 2.8,  3.8, -3.2, -4.2,  0.8],\n",
+       "       [ 1.8, -1.2, -3.2,  3.8, -1.2]])"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr3 = np.random.randint(0,10,size=(4,5))\n",
+    "\n",
+    "# 沿着列的方向，求每行的平均值，结果有4个数\n",
+    "arr4 = arr3.mean(axis = 1) \n",
+    "\n",
+    "display(arr3,arr4)\n",
+    "\n",
+    "# 形状改变，4行1列\n",
+    "display(arr4.reshape(4,1))\n",
+    "\n",
+    "# arr3有4行，arr4.reshape(4,1)也有4行\n",
+    "# arr3的每一列都减去 arr4.reshape(4,1)\n",
+    "arr3 - arr4.reshape(4,1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "ceb0f797",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "三维数组：\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[[0, 1],\n",
+       "        [2, 3],\n",
+       "        [4, 5],\n",
+       "        [6, 7]],\n",
+       "\n",
+       "       [[0, 1],\n",
+       "        [2, 3],\n",
+       "        [4, 5],\n",
+       "        [6, 7]],\n",
+       "\n",
+       "       [[0, 1],\n",
+       "        [2, 3],\n",
+       "        [4, 5],\n",
+       "        [6, 7]]])"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "二维数组：\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 1],\n",
+       "       [2, 3],\n",
+       "       [4, 5],\n",
+       "       [6, 7]])"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "相加后：\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[[ 0,  2],\n",
+       "        [ 4,  6],\n",
+       "        [ 8, 10],\n",
+       "        [12, 14]],\n",
+       "\n",
+       "       [[ 0,  2],\n",
+       "        [ 4,  6],\n",
+       "        [ 8, 10],\n",
+       "        [12, 14]],\n",
+       "\n",
+       "       [[ 0,  2],\n",
+       "        [ 4,  6],\n",
+       "        [ 8, 10],\n",
+       "        [12, 14]]])"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# 二维数组，在三维数组上广播\n",
+    "arr1 = np.array([0,1,2,3,4,5,6,7]*3).reshape(3,4,2)  # shape(3,4,2)\n",
+    "arr2 = np.array([0,1,2,3,4,5,6,7]).reshape(4,2)  # shape(4,2)\n",
+    "\n",
+    "print(\"三维数组：\")\n",
+    "display(arr1)\n",
+    "\n",
+    "print(\"二维数组：\")\n",
+    "display(arr2)\n",
+    "\n",
+    "print(\"相加后：\")\n",
+    "arr3 = arr1 + arr2  # arr2数组在 arr1数组0轴上，复制3份，分别与arr1数组0轴上的数据相加\n",
+    "display(arr3)"
    ]
   }
  ],
@@ -708,7 +940,7 @@
     "height": "calc(100% - 180px)",
     "left": "10px",
     "top": "150px",
-    "width": "238.4px"
+    "width": "165px"
    },
    "toc_section_display": true,
    "toc_window_display": true
